results/classifier/zero-shot/105/instruction/1816614
instruction: 0.902
other: 0.806
mistranslation: 0.659
device: 0.655
semantic: 0.650
graphic: 0.647
socket: 0.464
vnc: 0.436
network: 0.436
KVM: 0.416
boot: 0.331
assembly: 0.244

error: static assertion failed: "arm generic timer needs __Int128 defined"

Hi,

Accordingly to the instruction from https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842060/QEMU we have downloaded the Xilinx QEMU and tried to build it on Ubuntu 16.04.5 32Bit OS. We have done all the following steps from the instruction:
$ git clone git://github.com/Xilinx/qemu.git
$ cd qemu
$ git submodule update --init dtc
$ ./configure --target-list="aarch64-softmmu,microblazeel-softmmu" --enable-fdt --disable-kvm --disable-xen
$ make 
and we have got the error during the compilation:
/home/qemu/include/qemu/int128.h:168:1: error: static assertion failed: "arm generic timer needs __Int128 defined"
 _Static_assert(0, "arm generic timer needs __Int128 defined");
 ^
/home/qemu/rules.mak:66: recipe for target 'stubs/qmp_pc_dimm.o' failed

Could you please help to solve this issue.

Last commit: commit  0b2f6a40631acd7e0cf789ea86b188d76c11149d

Thanks,
Best Regards,
Piotr

Hi there; this bug database is for issues in upstream QEMU. The assert() you have hit is not in upstream QEMU at all, so it must be something that Xilinx have added. For questions about Xilinx's version, you should talk to them, not us.

That said, I think the answer is likely to be "they don't support building for 32-bit hosts", and you'll find that if you use a 64-bit host OS instead it will work.


